--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,4 +25,7 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'dev.nextftc:ftc:1.0.0-beta.3'
+    implementation 'dev.nextftc:hardware:1.0.0-beta.3' // If you would like to use the hardware module
+    implementation 'dev.nextftc.extensions:pedro:1.0.0'
 }
