--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,6 +2,7 @@ repositories {
     mavenCentral()
     google() // Needed for androidx
     maven { url = 'https://maven.pedropathing.com/' } // PedroPathing repository
+    maven { url = 'https://maven.brott.dev/' }
 }
 
 dependencies {
@@ -14,4 +15,5 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:11.0.0'
     implementation 'org.firstinspires.ftc:Vision:11.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.5.1'
 }
