--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,4 @@ org.gradle.jvmargs=-Xmx1024M
 android.nonTransitiveRClass=false
 
 # Force Gradle to use Java 17 for compatibility
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/liberica-jdk-17-full.jdk/Contents/Home
+#org.gradle.java.home=/Library/Java/JavaVirtualMachines/liberica-jdk-17-full.jdk/Contents/Home
