--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation 'dev.nextftc:ftc:1.0.1'
     implementation 'dev.nextftc:hardware:1.0.1'
     implementation 'dev.nextftc.extensions:pedro:1.0.0'
+    implementation 'org.ftclib.ftclib:core:2.1.1'
 }
